--- a/mmg_remeshing_examples/use_cases/channel_sphere3D/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/channel_sphere3D/source/ProjectParameters.json
@@ -126,7 +126,7 @@
                         },
                         "file_label"          : "time",
                         "output_control_type" : "step",
-                        "output_frequency"    : 1,
+                        "output_interval"     : 1,
                         "body_output"         : true,
                         "node_output"         : false,
                         "skin_output"         : false,
@@ -147,7 +147,7 @@
             "Parameters"    : {
                 "model_part_name"                    : "FluidModelPart.",
                 "output_control_type"                : "step",
-                "output_frequency"                   : 1,
+                "output_interval"                    : 1,
                 "file_format"                        : "ascii",
                 "output_precision"                   : 7,
                 "output_sub_model_parts"             : false,
