--- a/mmg_remeshing_examples/use_cases/contacting_cylinders/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/contacting_cylinders/source/ProjectParameters.json
@@ -141,7 +141,7 @@
                         },
                         "file_label"          : "step",
                         "output_control_type" : "time",
-                        "output_frequency"    : 1.0e-2,
+                        "output_interval"     : 1.0e-2,
                         "body_output"         : true,
                         "node_output"         : false,
                         "skin_output"         : false,
@@ -163,7 +163,7 @@
             "Parameters"    : {
                 "model_part_name"                    : "Structure",
                 "output_control_type"                : "time",
-                "output_frequency"                   : 1.0e-2,
+                "output_interval"                    : 1.0e-2,
                 "file_format"                        : "ascii",
                 "output_precision"                   : 7,
                 "output_sub_model_parts"             : false,
