--- a/co_simulation/CoSim_DevExamples/oscillating_rectangle_fsi_benchmark/ProjectParametersCFD_FractStep.json
+++ b/co_simulation/CoSim_DevExamples/oscillating_rectangle_fsi_benchmark/ProjectParametersCFD_FractStep.json
@@ -16,7 +16,7 @@
             },
             "file_label"          : "time",
             "output_control_type" : "time",
-            "output_frequency"    : 0.5,
+            "output_interval"     : 0.5,
             "body_output"         : true,
             "node_output"         : false,
             "skin_output"         : false,
