--- a/fluid_dynamics/use_cases/kelvin_helmholtz_instability/source/ProjectParameters.json
+++ b/fluid_dynamics/use_cases/kelvin_helmholtz_instability/source/ProjectParameters.json
@@ -156,7 +156,7 @@
                         },
                         "file_label"          : "step",
                         "output_control_type" : "step",
-                        "output_frequency"    : 1.0,
+                        "output_interval"     : 1.0,
                         "body_output"         : true,
                         "node_output"         : false,
                         "skin_output"         : false,
@@ -178,7 +178,7 @@
                 "file_format"                        : "ascii",
                 "output_precision"                   : 7,
                 "output_control_type"                : "step",
-                "output_frequency"                   : 1.0,
+                "output_interval"                    : 1.0,
                 "output_sub_model_parts"             : true,
                 "folder_name"                        : "VTK_Output",
                 "save_output_files_in_folder"        : true,
