--- a/mmg_remeshing_examples/use_cases/cavity2D/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/cavity2D/source/ProjectParameters.json
@@ -136,7 +136,7 @@
                         },
                         "file_label"                  : "time",
                         "output_control_type"         : "time",
-                        "output_frequency"            : 1.0,
+                        "output_interval"             : 1.0,
                         "body_output"                 : true,
                         "node_output"                 : false,
                         "skin_output"                 : false,
@@ -157,7 +157,7 @@
             "Parameters"    : {
                 "model_part_name"                    : "FluidModelPart.fluid_computational_model_part",
                 "output_control_type"                : "step",
-                "output_frequency"                   : 1,
+                "output_interval"                    : 1,
                 "file_format"                        : "ascii",
                 "output_precision"                   : 7,
                 "output_sub_model_parts"             : true,
