--- a/rom_application/use_cases/structural/shell_elements_with_master_slave_constraints/ProjectParameters.json
+++ b/rom_application/use_cases/structural/shell_elements_with_master_slave_constraints/ProjectParameters.json
@@ -85,7 +85,7 @@
             "Parameters"    : {
                 "model_part_name"                    : "Structure",
                 "output_control_type"                : "step",
-                "output_frequency"                   : 1,
+                "output_interval"                    : 1,
                 "file_format"                        : "binary",
                 "output_precision"                   : 7,
                 "output_sub_model_parts"             : false,
