--- a/swimming_dem/use_cases/PFEMFluid_Element/One_Way/Small_Box_Lagrangian_OW/source/ProjectParameters.json
+++ b/swimming_dem/use_cases/PFEMFluid_Element/One_Way/Small_Box_Lagrangian_OW/source/ProjectParameters.json
@@ -25,7 +25,7 @@
                     },
                      "file_label"          : "time",
                      "output_control_type" : "time",
-                     "output_frequency"    : 0.02,
+                     "output_interval"     : 0.02,
                      "body_output"         : true,
                      "node_output"         : true,
                      "skin_output"         : false,
