--- a/fluid_dynamics/use_cases/kelvin_helmholtz_instability/source/ProjectParameters.json
+++ b/fluid_dynamics/use_cases/kelvin_helmholtz_instability/source/ProjectParameters.json
@@ -180,7 +180,7 @@
                 "output_control_type"                : "step",
                 "output_interval"                    : 1.0,
                 "output_sub_model_parts"             : true,
-                "folder_name"                        : "VTK_Output",
+                "output_path"                        : "VTK_Output",
                 "save_output_files_in_folder"        : true,
                 "nodal_solution_step_data_variables" : ["VELOCITY","PRESSURE"]
             }
