--- a/mmg_remeshing_examples/use_cases/beam2D/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/beam2D/source/ProjectParameters.json
@@ -143,7 +143,7 @@
                 "file_format"                        : "ascii",
                 "output_precision"                   : 7,
                 "output_sub_model_parts"             : false,
-                "folder_name"                        : "vtk_output",
+                "output_path"                        : "vtk_output",
                 "save_output_files_in_folder"        : true,
                 "nodal_solution_step_data_variables" : ["DISPLACEMENT","REACTION","VELOCITY","ACCELERATION"],
                 "nodal_data_value_variables"         : [],
