--- a/mmg_remeshing_examples/use_cases/contact_hessian/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/contact_hessian/source/ProjectParameters.json
@@ -149,7 +149,7 @@
                 "file_format"                        : "ascii",
                 "output_precision"                   : 7,
                 "output_sub_model_parts"             : false,
-                "folder_name"                        : "vtk_output",
+                "output_path"                        : "vtk_output",
                 "save_output_files_in_folder"        : true,
                 "nodal_solution_step_data_variables" : ["DISPLACEMENT","REACTION","WEIGHTED_GAP","NORMAL"],
                 "nodal_data_value_variables"         : ["NODAL_AREA", "AUGMENTED_NORMAL_CONTACT_PRESSURE"],
