--- a/poromechanics/use_cases/consolidation_interface_3D/source/ProjectParameters.json
+++ b/poromechanics/use_cases/consolidation_interface_3D/source/ProjectParameters.json
@@ -85,8 +85,8 @@
                         "node_output":         false,
                         "skin_output":         false,
                         "plane_output":        [],
-                        "nodal_results":       ["DISPLACEMENT","WATER_PRESSURE","FACE_LOAD","NODAL_CAUCHY_STRESS_TENSOR"],
-                        "gauss_point_results": ["CAUCHY_STRESS_TENSOR","TOTAL_STRESS_TENSOR"]
+                        "nodal_results":       ["DISPLACEMENT","WATER_PRESSURE","FACE_LOAD","NODAL_EFFECTIVE_STRESS_TENSOR"],
+                        "gauss_point_results": ["EFFECTIVE_STRESS_TENSOR","TOTAL_STRESS_TENSOR"]
                     },
                     "point_data_configuration":  []
                 }
