--- a/poromechanics/use_cases/fluid_pumping_2D/source/ProjectParameters.json
+++ b/poromechanics/use_cases/fluid_pumping_2D/source/ProjectParameters.json
@@ -5,15 +5,14 @@
         "end_time":             1.0e-3,
         "echo_level":           1,
         "parallel_type":        "OpenMP",
-        "number_of_threads":    1,
         "fracture_utility":     false
     },
     "solver_settings": {
-        "solver_type":                        "poromechanics_U_Pw_solver",
-        "model_part_name":                    "PorousModelPart",
-        "domain_size":                        2,
-        "start_time":                         0.0,
-        "time_step":                          1.0e-5,
+        "solver_type":    "poromechanics_U_Pw_solver",
+        "model_part_name":    "PorousModelPart",
+        "domain_size":    2,
+        "start_time":    0.0,
+        "time_step":    1.0e-5,
         "model_import_settings":              {
             "input_type":    "mdpa",
             "input_filename":    "fluid_pumping_2D"
@@ -21,46 +20,46 @@
         "material_import_settings": {
             "materials_filename":    "PoroMaterials.json"
         },
-        "buffer_size":                        2,
-        "echo_level":                         1,
-        "clear_storage":                      false,
-        "compute_reactions":                  false,
-        "move_mesh_flag":                     false,
-        "periodic_interface_conditions":      false,
-        "reform_dofs_at_each_step":           false,
-        "nodal_smoothing":                    true,
-        "block_builder":                      true,
-        "solution_type":                      "quasi_static",
-        "scheme_type":                        "Newmark",
-        "newmark_beta":                       0.25,
-        "newmark_gamma":                      0.5,
-        "newmark_theta":                      0.5,
-        "rayleigh_m":                         0.0,
-        "rayleigh_k":                         0.0,
-        "strategy_type":                      "newton_raphson",
-        "convergence_criterion":              "And_criterion",
+        "buffer_size":    2,
+        "echo_level":    1,
+        "clear_storage":    false,
+        "compute_reactions":    true,
+        "move_mesh_flag":    false,
+        "periodic_interface_conditions":    false,
+        "reform_dofs_at_each_step":    false,
+        "nodal_smoothing":    false,
+        "gp_to_nodal_variable_list": [],
+        "gp_to_nodal_variable_extrapolate_non_historical": false,
+        "block_builder":    false,
+        "solution_type":    "implicit_quasi_static",
+        "scheme_type":    "Newmark",
+        "newmark_beta":    0.25,
+        "newmark_gamma":    0.5,
+        "newmark_theta":    0.5,
+        "calculate_alpha_beta":    false,
+        "omega_1":    1.0,
+        "omega_n":    10.0,
+        "xi_1":    1.0,
+        "xi_n":    0.05,
+        "rayleigh_alpha":    0.0,
+        "rayleigh_beta":    0.0,
+        "strategy_type":    "newton_raphson",
+        "convergence_criterion":    "And_criterion",
         "displacement_relative_tolerance":    1.0E-3,
         "displacement_absolute_tolerance":    1.0E-8,
-        "residual_relative_tolerance":        1.0E-3,
-        "residual_absolute_tolerance":        1.0E-8,
-        "max_iteration":                      15,
-        "desired_iterations":                 4,
-        "max_radius_factor":                  20.0,
-        "min_radius_factor":                  0.5,
-        "nonlocal_damage":                    false,
-        "characteristic_length":              0.05,
+        "residual_relative_tolerance":    1.0E-3,
+        "residual_absolute_tolerance":    1.0E-8,
+        "max_iteration":    15,
+        "desired_iterations":    4,
+        "max_radius_factor":    20.0,
+        "min_radius_factor":    0.5,
+        "nonlocal_damage":    false,
+        "characteristic_length":    0.05,
         "linear_solver_settings":             {
-            "solver_type":     "amgcl",
-            "smoother_type":   "ilu0",
-            "krylov_type":     "gmres",
-            "coarsening_type": "aggregation",
-            "max_iteration":   100,
-            "verbosity":       0,
-            "tolerance":       1.0e-6,
-            "scaling":         false
+            "solver_type":   "LinearSolversApplication.sparse_lu"
         },
         "problem_domain_sub_model_part_list": ["Body_Part-auto-1","Interface_Part-auto-1","Interface_Part-auto-2"],
-        "processes_sub_model_part_list":      ["Solid_Displacement-auto-1","Solid_Displacement-auto-2","Solid_Displacement-auto-3","Fluid_Pressure-auto-1","Normal_Fluid_Flux-auto-1","Interface_Normal_Fluid_Flux-auto-1"],
+        "processes_sub_model_part_list":      ["Solid_Displacement-auto-1","Solid_Displacement-auto-2","Solid_Displacement-auto-3","Fluid_Pressure-auto-1","Interface_Normal_Fluid_Flux-auto-1"],
         "body_domain_sub_model_part_list":    ["Body_Part-auto-1"]
     },
     "output_processes": {
@@ -81,13 +80,14 @@
                         },
                         "file_label":          "step",
                         "output_control_type": "step",
-                        "output_interval" :    1,
+                        "output_interval":    1,
                         "body_output":         true,
                         "node_output":         false,
                         "skin_output":         false,
                         "plane_output":        [],
-                        "nodal_results":       ["DISPLACEMENT","WATER_PRESSURE","NORMAL_FLUID_FLUX","NODAL_CAUCHY_STRESS_TENSOR","NODAL_DAMAGE_VARIABLE","NODAL_JOINT_WIDTH","NODAL_JOINT_DAMAGE"],
-                        "gauss_point_results": ["CAUCHY_STRESS_TENSOR","FLUID_FLUX_VECTOR","DAMAGE_VARIABLE","JOINT_WIDTH"]
+                        "nodal_results":       ["DISPLACEMENT","WATER_PRESSURE","REACTION","REACTION_WATER_PRESSURE","NORMAL_FLUID_FLUX"],
+                        "nodal_nonhistorical_results": [],
+                        "gauss_point_results": ["EFFECTIVE_STRESS_TENSOR","FLUID_FLUX_VECTOR","DAMAGE_VARIABLE","JOINT_WIDTH"]
                     },
                     "point_data_configuration":  []
                 }
@@ -101,8 +101,8 @@
             "Parameters":    {
                 "model_part_name": "PorousModelPart.Solid_Displacement-auto-2",
                 "variable_name":   "DISPLACEMENT",
-                "active":          [true,true,false],
-                "is_fixed":        [true,true,false],
+                "active":          [false,true,false],
+                "is_fixed":        [false,true,false],
                 "value":           [0.0,0.0,0.0],
                 "table":           [0,0,0]
             }
@@ -144,15 +144,6 @@
             }
         }],
         "loads_process_list": [{
-            "python_module": "apply_scalar_constraint_table_process",
-            "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
-            "Parameters":    {
-                "model_part_name": "PorousModelPart.Normal_Fluid_Flux-auto-1",
-                "variable_name":   "NORMAL_FLUID_FLUX",
-                "value":           0.0,
-                "table":           0
-            }
-        },{
             "python_module": "apply_scalar_constraint_table_process",
             "kratos_module": "KratosMultiphysics.PoromechanicsApplication",
             "Parameters":    {
