--- a/mmg_remeshing_examples/use_cases/cavity2D/source/ProjectParameters.json
+++ b/mmg_remeshing_examples/use_cases/cavity2D/source/ProjectParameters.json
@@ -1,8 +1,6 @@
 {
     "problem_data"                     : {
         "problem_name"    : "2D_cavity_test",
-        "model_part_name" : "FluidModelPart",
-        "domain_size"     : 2,
         "parallel_type"   : "OpenMP",
         "echo_level"      : 0,
         "start_time"      : 0.0,
@@ -10,6 +8,8 @@
     },
     "solver_settings"                  : {
         "solver_type"                  : "Embedded",
+        "model_part_name"              : "FluidModelPart",
+        "domain_size"                  : 2,
         "model_import_settings"        : {
             "input_type"     : "mdpa",
             "input_filename" : "2D_cavity_test"
@@ -18,7 +18,7 @@
         "echo_level"                   : 0,
         "time_order"                   : 2,
         "compute_reactions"            : false,
-        "reform_dofs_at_each_step"     : false,
+        "reform_dofs_at_each_step"     : true,
         "relative_velocity_tolerance"  : 0.001,
         "absolute_velocity_tolerance"  : 1e-5,
         "relative_pressure_tolerance"  : 0.001,
@@ -78,19 +78,6 @@
             "Parameters"    : {
                 "mesh_id"         : 0,
                 "model_part_name" : "FluidModelPart.NoSlip2D_No_Slip_Auto1"
-            }
-        }],
-        "gravity"                          : [{
-            "python_module" : "assign_vector_by_direction_process",
-            "kratos_module" : "KratosMultiphysics",
-            "process_name"  : "AssignVectorByDirectionProcess",
-            "Parameters"    : {
-                "mesh_id"         : 0,
-                "model_part_name" : "FluidModelPart.Parts_Parts_Auto1",
-                "variable_name"   : "BODY_FORCE",
-                "modulus"         : 0.0,
-                "constrained"     : false,
-                "direction"       : [0.0,-1.0,0.0]
             }
         }],
         "initial_remeshing_process" :[
