--- a/rom_application/RomManager PotentialFlow/naca0012_rom_potential_flow/ProjectParametersPrimalROM.json
+++ b/rom_application/RomManager PotentialFlow/naca0012_rom_potential_flow/ProjectParametersPrimalROM.json
@@ -17,6 +17,9 @@
         },
         "maximum_iterations"     : 30,
         "echo_level"             : 0,
+        "material_import_settings": {
+            "materials_filename": ""
+        },
         "formulation" :
         {
             "element_type": "perturbation_incompressible"
