Modify ProjectParameters.json for iga_shell_3p_single_patch
Updated project parameters for iga_shell_3p_single_patch use case.

--- a/iga/use_cases/iga_shell_3p_single_patch/ProjectParameters.json
+++ b/iga/use_cases/iga_shell_3p_single_patch/ProjectParameters.json
@@ -1,6 +1,6 @@
 {
   "problem_data": {
-    "problem_name": "embedded_plate",
+    "problem_name": "iga_shell_3p_single_patch",
     "echo_level": 4,
     "parallel_type": "OpenMP",
     "start_time": 0.0,
@@ -121,4 +121,5 @@
     }
   ]
 }
+
 }
